product_docs/docs/pem/7.10/pem_agent/index.mdx
---
title: "PEM Agent User Guide"
---



PEM is composed of three primary components: PEM server, PEM agent, and PEM web interface. The PEM agent is responsible for performing tasks on each managed machine and collecting statistics for the database server and operating system.

This document provides information that is required to work with PEM agents. The guide will acquaint you with the basic registering, configuration, and management of agents. The guide is broken up into the following core sections:

-   **Postgres Enterprise Manager - Overview** - This section provides an overview of PEM architecure and also provides information about hardware and software prerequsites for installing a PEM agent.
-   **Registering a PEM Agent** - This section provides information about registration of a PEM agent.
-   **Managing a PEM agent** - This section provides information about configuring and managing a PEM agent.
-   **Troubleshooting for PEM agent** - This section provides information about trobleshooting for PEM agents.
-   **Uninstalling a PEM agent** - This section provides information about uninstalling a PEM agent.

This document uses *Postgres* to mean either the PostgreSQL or EDB Postgres Advanced Server database.

<div class="toctree" maxdepth="3">

pem\_overview installing\_pem\_agent registering\_agent managing\_pem\_agent pem\_agent\_troubleshooting uninstalling\_pem\_agent conclusion

</div>
