product_docs/docs/pem/7.16/pem_agent/index.mdx
---
navTitle: Agent User Guide
title: "PEM Agent User Guide"
---

PEM is composed of three primary components: PEM server, PEM agent, and PEM web interface. The PEM agent is responsible for performing tasks on each managed machine and collecting statistics for the database server and operating system.

For information about the platforms and versions supported by PEM, visit the EDB website at:

<https://www.enterprisedb.com/services-support/edb-supported-products-and-platforms#pem>

**Please note**: PEM 8.0.1 is no longer supported on CentOS/RHEL/OEL 6.x platforms. It is strongly recommended that EDB products running on these platforms be migrated to a supported platform.

For information about the installation, uninstallation, or upgrading of a PEM Agent, visit the EDB website at:

<https://www.enterprisedb.com/docs/pem/latest/>

This document provides information that is required to work with PEM agents. The guide will acquaint you with the basic registering, configuration, and management of agents. The guide is broken up into the following core sections:

-   **Postgres Enterprise Manager - Overview** - This section provides an overview of PEM architecure.
-   **Registering a PEM Agent** - This section provides information about registration of a PEM agent.
-   **Managing a PEM agent** - This section provides information about configuring and managing a PEM agent.
-   **Troubleshooting for PEM agent** - This section provides information about troubleshooting for PEM agents.

This document uses *Postgres* to mean either the PostgreSQL or EDB Postgres Advanced Server database.

<div class="toctree" maxdepth="3">

pem_architecture registering_agent managing_pem_agent pem_agent_troubleshooting conclusion

</div>
